--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: One-Punch-Man
-SEOTitle: 一拳超人的博客 | One-Punch-Man
+SEOTitle: 一拳超人00000000000000000的博客 | One-Punch-Man
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
