--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: One-Punch-Man11111
+title: One-Punch-Man
 SEOTitle: 一拳超人的博客 | One-Punch-Man
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
