--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-# Site settings
-title: One-Punch-Man
-SEOTitle: 一拳超人的博客 | One-Punch-Man
-header-img: img/man-1.jpg
-email: qiubaiying@gmail.com
-description: "Every failure is leading towards success."
-keyword: "Liuzebo"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+# Site settings 基础设置
+title: One-Punch-Man                  #你博客的标题
+SEOTitle: 一拳超人的博客 | One-Punch-Man     #显示在浏览器上搜索的时候显示的标题
+header-img: img/man-1.jpg                #显示在首页的背景图片
+email: liu1423248687@gmail.com  #你的邮箱
+description: "Every failure is leading towards success."    #网站介绍
+keyword: "Liuzebo"      #关键词
+url: "http://1423248687.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/1423248687/1423248687.github.io.git" # you code repository  代码在git上的位置
 
-# Sidebar settings
+# Sidebar settings  侧边栏
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Goals determine what you going to be!"
 sidebar-avatar: /img/avatar_m.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
