--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/man-1.jpg                #显示在首页的背景图片
 email: liu1423248687@gmail.com  #你的邮箱
 description: "一拳超人的个人修行记录"    #网站介绍
 keyword: "Liuzebo"      #关键词
-url: "http://1423248687.github.io"          # your host, for absolute URL
+url: "http://one-punch-man.top"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/1423248687/1423248687.github.io.git" # you code repository  代码在git上的位置
 
